mention how to PXE-boot from an ovs-cni interface

--- a/creating-virtual-machines/interfaces-and-networks.adoc
+++ b/creating-virtual-machines/interfaces-and-networks.adoc
@@ -107,6 +107,7 @@ spec:
           bridge: {}
         - name: ovs-net
           bridge: {}
+          bootOrder: 1   # attempt to PXE-boot from this L2 networks
   networks:
   - name: default
     pod: {} # Stock pod network
