Link virtio win document
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/creating-virtual-machines/virtio-win.adoc
+++ b/creating-virtual-machines/virtio-win.adoc
@@ -1,22 +1,25 @@
-# Windows driver disk usage
+Windows driver disk usage
+-------------------------
 
-**Provides**:
+*Provides*:
 
 * virtio drivers
 * QEMU Guest Agent
 
-KubeVirt distributes virtio drivers for Microsoft Windows in form if container disk.
-The package contains the virtio drivers as well as qemu guest agent.
-The disk was tested on Microsoft Windows Server 2012. However, it should work on
-Microsoft Windows 7 and up.
+KubeVirt distributes virtio drivers for Microsoft Windows in form if
+container disk. The package contains the virtio drivers as well as qemu
+guest agent. The disk was tested on Microsoft Windows Server 2012.
+However, it should work on Microsoft Windows 7 and up.
 
-Package is intended to be used as CD-ROM attached to virtual machine with Microsoft Windows.
-It can be used either during install phase as SATA CD-ROM to provider drivers or
-in existing installation as SATA CD-ROM to provide QEMU Guest Agent installation.
+Package is intended to be used as CD-ROM attached to virtual machine
+with Microsoft Windows. It can be used either during install phase as
+SATA CD-ROM to provider drivers or in existing installation as SATA
+CD-ROM to provide QEMU Guest Agent installation.
 
 Example how to attach:
 
-```yaml
+[source,yaml]
+----
 apiVersion: kubevirt.io/v1alpha2
 kind: VirtualMachineInstance
 metadata:
@@ -49,4 +52,4 @@ spec:
   - containerDisk:
       image: kubevirt/virtio-container-disk
     name: registryvolume
-```
+----
