--- a/creating-virtual-machines/disks-and-volumes.adoc
+++ b/creating-virtual-machines/disks-and-volumes.adoc
@@ -11,8 +11,7 @@ Disks
 ~~~~~
 
 Like all other vmi devices a `spec.domain.devices.disks` element has a
-mandatory `name`, and furthermore, it has a mandatory `volumeName` entry
-which references a volume inside `spec.volumes`.
+mandatory `name` which references a volume inside `spec.volumes`.
 
 A disk can be made accessible via four different types:
 
@@ -43,7 +42,7 @@ as a `lun` device to the VM:
 ----
 metadata:
   name: testvmi-lun
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 spec:
   domain:
@@ -53,11 +52,10 @@ spec:
     devices:
       disks:
       - name: mypvcdisk
-        volumeName: mypvc
         # This makes it a lun device
         lun: {}
   volumes:
-    - name: mypvc
+    - name: mypvcdisk
       persistentVolumeClaim:
         claimName: mypvc
 ----
@@ -74,7 +72,7 @@ as a `disk` device to the VM:
 ----
 metadata:
   name: testvmi-disk
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 spec:
   domain:
@@ -84,11 +82,10 @@ spec:
     devices:
       disks:
       - name: mypvcdisk
-        volumeName: mypvc
         # This makes it a disk
         disk: {}
   volumes:
-    - name: mypvc
+    - name: mypvcdisk
       persistentVolumeClaim:
         claimName: mypvc
 ----
@@ -100,7 +97,7 @@ depends on the chipset the VM is configured to use:
 ----
 metadata:
   name: testvmi-disk
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 spec:
   domain:
@@ -110,14 +107,13 @@ spec:
     devices:
       disks:
       - name: mypvcdisk
-        volumeName: mypvc
         # This makes it a disk
         disk:
           # This makes it exposed as /dev/vda, being the only and thus first
           # disk attached to the VM
           bus: virtio
   volumes:
-    - name: mypvc
+    - name: mypvcdisk
       persistentVolumeClaim:
         claimName: mypvc
 ----
@@ -134,7 +130,7 @@ as a `floppy` device to the VM:
 ----
 metadata:
   name: testvmi-floppy
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 spec:
   domain:
@@ -144,11 +140,10 @@ spec:
     devices:
       disks:
       - name: mypvcdisk
-        volumeName: mypvc
         # This makes it a floppy
         floppy: {}
   volumes:
-    - name: mypvc
+    - name: mypvcdisk
       persistentVolumeClaim:
         claimName: mypvc
 ----
@@ -166,7 +161,7 @@ as a `floppy` device to the VM:
 ----
 metadata:
   name: testvmi-cdrom
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 spec:
   domain:
@@ -176,7 +171,6 @@ spec:
     devices:
       disks:
       - name: mypvcdisk
-        volumeName: mypvc
         # This makes it a cdrom
         cdrom:
           # This makes the cdrom writeable
@@ -184,7 +178,7 @@ spec:
           # This makes the cdrom be exposed as SATA device
           bus: sata
   volumes:
-    - name: mypvc
+    - name: mypvcdisk
       persistentVolumeClaim:
         claimName: mypvc
 ----
@@ -223,7 +217,7 @@ datasource may look like this:
 ----
 metadata:
   name: testvmi-cloudinitnocloud
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 spec:
   domain:
@@ -233,13 +227,11 @@ spec:
     devices:
       disks:
       - name: mybootdisk
-        volumeName: mypvc
         lun: {}
       - name: mynoclouddisk
-        volumeName: mynocloudvolume
         disk: {}
   volumes:
-    - name: mypvc
+    - name: mybootdisk
       persistentVolumeClaim:
         claimName: mypvc
     - name: mynoclouddisk
@@ -286,7 +278,7 @@ may look like this:
 ----
 metadata:
   name: testvmi-pvc
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 spec:
   domain:
@@ -296,10 +288,9 @@ spec:
     devices:
       disks:
       - name: mypvcdisk
-        volumeName: mypvc
         lun: {}
   volumes:
-    - name: mypvc
+    - name: mypvcdisk
       persistentVolumeClaim:
         claimName: mypvc
 ----
@@ -329,7 +320,7 @@ API].
 ----
 metadata:
   name: testvmi-ephemeral-pvc
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 spec:
   domain:
@@ -339,10 +330,9 @@ spec:
     devices:
       disks:
       - name: mypvcdisk
-        volumeName: mypvc
         lun: {}
   volumes:
-    - name: mypvc
+    - name: mypvcdisk
       ephemeral:
         persistentVolumeClaim:
           claimName: mypvc
@@ -418,7 +408,7 @@ Example: Attach the ContainerDisk as an ephemeral disk to a VM.
 ----
 metadata:
   name: testvmi-containerdisk
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 spec:
   domain:
@@ -428,10 +418,9 @@ spec:
     devices:
       disks:
       - name: containerdisk
-        volumeName: registryvolume
         disk: {}
   volumes:
-    - name: registryvolume
+    - name: containerdisk
       containerDisk:
         image: vmidisks/fedora25:latest
 ----
@@ -468,7 +457,7 @@ Create VMI with container disk pointing to the custom location:
 ----
 metadata:
   name: testvmi-containerdisk
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 spec:
   domain:
@@ -478,10 +467,9 @@ spec:
     devices:
       disks:
       - name: containerdisk
-        volumeName: registryvolume
         disk: {}
   volumes:
-    - name: registryvolume
+    - name: containerdisk
       containerDisk:
         image: vmidisks/fedora25:latest
         path: /custom-disk-path/fedora.qcow2
@@ -499,7 +487,7 @@ Example: Boot cirros with an extra `emptyDisk` with a size of `2GiB`:
 
 [source,yaml]
 ----
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 metadata:
   name: testvmi-nocloud
@@ -512,18 +500,16 @@ spec:
     devices:
       disks:
       - name: containerdisk
-        volumeName: registryvolume
         disk:
           bus: virtio
       - name: emptydisk
-        volumeName: emptydiskvolume
         disk:
           bus: virtio
   volumes:
-    - name: registryvolume
+    - name: containerdisk
       containerDisk:
         image: kubevirt/cirros-registry-disk-demo:latest
-    - name: emptydiskvolume
+    - name: emptydisk
       emptyDisk:
         capacity: 2Gi
 ----
@@ -555,7 +541,7 @@ to a VM.
 
 [source,yaml]
 ----
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 metadata:
   labels:
@@ -568,7 +554,6 @@ spec:
       - disk:
           bus: virtio
         name: host-disk
-        volumeName: hostdiskvolume
     machine:
       type: ""
     resources:
@@ -580,7 +565,7 @@ spec:
       capacity: 1Gi
       path: /data/disk.img
       type: DiskOrCreate
-    name: hostdiskvolume
+    name: host-disk
 status: {}
 ----
 
@@ -600,7 +585,7 @@ DataVolumes can be defined in the VM spec directly by adding the
 DataVolumes to the dataVolumeTemplates list. Below is an example.
 
 ....
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachine
 metadata:
   labels:
@@ -619,14 +604,13 @@ spec:
           - disk:
               bus: virtio
             name: datavolumedisk1
-            volumeName: datavolumevolume1
         resources:
           requests:
             memory: 64M
       volumes:
       - dataVolume:
           name: alpine-dv
-        name: datavolumevolume1
+        name: datavolumedisk1
   dataVolumeTemplates:
   - metadata:
       name: alpine-dv
@@ -672,7 +656,7 @@ imported. KubeVirt knows not to start the VMI until all referenced
 DataVolumes have finished their clone and import phases.
 
 ....
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 metadata:
   labels:
@@ -685,7 +669,6 @@ spec:
       - disk:
           bus: virtio
         name: disk1
-        volumeName: volume1
     machine:
       type: ""
     resources:
@@ -693,7 +676,7 @@ spec:
         memory: 64M
   terminationGracePeriodSeconds: 0
   volumes:
-  - name: volume1
+  - name: disk1
     dataVolume:
       name: alpine-datavolume
 ....
@@ -771,7 +754,7 @@ Example: Attach the `configMap` to a VM and use `cloudInit` to mount the
 
 [source,yaml]
 ----
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 metadata:
   labels:
@@ -784,14 +767,11 @@ spec:
       - disk:
           bus: virtio
         name: containerdisk
-        volumeName: registryvolume
       - disk:
           bus: virtio
         name: cloudinitdisk
-        volumeName: cloudinitvolume
       - disk: {}
         name: app-config-disk
-        volumeName: configmap-volume
         # set serial
         serial: CVLY623300HK240D
     machine:
@@ -801,7 +781,7 @@ spec:
         memory: 1024M
   terminationGracePeriodSeconds: 0
   volumes:
-  - name: registryvolume
+  - name: containerdisk
     containerDisk:
       image: kubevirt/fedora-cloud-container-disk-demo:latest
   - cloudInitNoCloud:
@@ -813,10 +793,10 @@ spec:
           # mount the ConfigMap
           - "mkdir /mnt/app-config"
           - "mount /dev/$(lsblk --nodeps -no name,serial | grep CVLY623300HK240D | cut -f1 -d' ') /mnt/app-config"
-    name: cloudinitvolume
+    name: cloudinitdisk
   - configMap:
       name: app-config
-    name: configmap-volume
+    name: app-config-disk
 status: {}
 ----
 
@@ -847,7 +827,7 @@ Example: Attach the `secret` to a VM and use `cloudInit` to mount the
 
 [source,yaml]
 ----
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 metadata:
   labels:
@@ -860,14 +840,11 @@ spec:
       - disk:
           bus: virtio
         name: containerdisk
-        volumeName: registryvolume
       - disk:
           bus: virtio
         name: cloudinitdisk
-        volumeName: cloudinitvolume
       - disk: {}
         name: app-secret-disk
-        volumeName: secret-volume
         # set serial
         serial: D23YZ9W6WA5DJ487
     machine:
@@ -877,7 +854,7 @@ spec:
         memory: 1024M
   terminationGracePeriodSeconds: 0
   volumes:
-  - name: registryvolume
+  - name: containerdisk
     containerDisk:
       image: kubevirt/fedora-cloud-container-disk-demo:latest
   - cloudInitNoCloud:
@@ -889,10 +866,10 @@ spec:
           # mount the Secret
           - "mkdir /mnt/app-secret"
           - "mount /dev/$(lsblk --nodeps -no name,serial | grep D23YZ9W6WA5DJ487 | cut -f1 -d' ') /mnt/app-secret"
-    name: cloudinitvolume
+    name: cloudinitdisk
   - secret:
       secretName: app-secret
-    name: secret-volume
+    name: app-secret-disk
 status: {}
 ----
 
@@ -910,7 +887,7 @@ Example:
 
 [source,yaml]
 ----
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 metadata:
   labels:
@@ -923,11 +900,9 @@ spec:
       - disk:
           bus: virtio
         name: containerdisk
-        volumeName: registryvolume
       - disk:
           bus: virtio
         name: serviceaccountdisk
-        volumeName: serviceaccountvolume
     machine:
       type: ""
     resources:
@@ -935,10 +910,10 @@ spec:
         memory: 1024M
   terminationGracePeriodSeconds: 0
   volumes:
-  - name: registryvolume
+  - name: containerdisk
     containerDisk:
       image: kubevirt/fedora-cloud-container-disk-demo:latest
-  - name: serviceaccountvolume
+  - name: serviceaccountdisk
     serviceAccount:
       serviceAccountName: default
 ----
@@ -1017,7 +992,7 @@ Shared IOThreads
 
 [source,yaml]
 ----
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 metadata:
   labels:
@@ -1033,60 +1008,53 @@ spec:
       - disk:
           bus: virtio
         name: mydisk
-        volumeName: myvolume
       - disk:
           bus: virtio
         name: emptydisk
-        volumeName: emptydiskvolume
         dedicatedIOThread: true
       - disk:
           bus: virtio
         name: emptydisk2
-        volumeName: emptydiskvolume2
         dedicatedIOThread: true
       - disk:
           bus: virtio
         name: emptydisk3
-        volumeName: emptydiskvolume3
       - disk:
           bus: virtio
         name: emptydisk4
-        volumeName: emptydiskvolume4
       - disk:
           bus: virtio
         name: emptydisk5
-        volumeName: emptydiskvolume5
       - disk:
           bus: virtio
         name: emptydisk6
-        volumeName: emptydiskvolume6
     machine:
       type: ""
     resources:
       requests:
         memory: 64M
   volumes:
-  - name: mypvc
+  - name: mydisk
     persistentVolumeClaim:
       claimName: mypvc
   - emptyDisk:
       capacity: 1Gi
-    name: emptydiskvolume
+    name: emptydisk
   - emptyDisk:
       capacity: 1Gi
-    name: emptydiskvolume2
+    name: emptydisk2
   - emptyDisk:
       capacity: 1Gi
-    name: emptydiskvolume3
+    name: emptydisk3
   - emptyDisk:
       capacity: 1Gi
-    name: emptydiskvolume4
+    name: emptydisk4
   - emptyDisk:
       capacity: 1Gi
-    name: emptydiskvolume5
+    name: emptydisk5
   - emptyDisk:
       capacity: 1Gi
-    name: emptydiskvolume6
+    name: emptydisk6
 ----
 
 In this example, emptydisk and emptydisk2 both request a dedicated
@@ -1108,7 +1076,7 @@ Auto IOThreads
 
 [source,yaml]
 ----
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 metadata:
   labels:
@@ -1124,60 +1092,53 @@ spec:
       - disk:
           bus: virtio
         name: mydisk
-        volumeName: mypvc
       - disk:
           bus: virtio
         name: emptydisk
-        volumeName: emptydiskvolume
         dedicatedIOThread: true
       - disk:
           bus: virtio
         name: emptydisk2
-        volumeName: emptydiskvolume2
         dedicatedIOThread: true
       - disk:
           bus: virtio
         name: emptydisk3
-        volumeName: emptydiskvolume3
       - disk:
           bus: virtio
         name: emptydisk4
-        volumeName: emptydiskvolume4
       - disk:
           bus: virtio
         name: emptydisk5
-        volumeName: emptydiskvolume5
       - disk:
           bus: virtio
         name: emptydisk6
-        volumeName: emptydiskvolume6
     machine:
       type: ""
     resources:
       requests:
         memory: 64M
   volumes:
-  - name: mypvc
+  - name: mydisk
     persistentVolumeClaim:
       claimName: mypvc
   - emptyDisk:
       capacity: 1Gi
-    name: emptydiskvolume
+    name: emptydisk
   - emptyDisk:
       capacity: 1Gi
-    name: emptydiskvolume2
+    name: emptydisk2
   - emptyDisk:
       capacity: 1Gi
-    name: emptydiskvolume3
+    name: emptydisk3
   - emptyDisk:
       capacity: 1Gi
-    name: emptydiskvolume4
+    name: emptydisk4
   - emptyDisk:
       capacity: 1Gi
-    name: emptydiskvolume5
+    name: emptydisk5
   - emptyDisk:
       capacity: 1Gi
-    name: emptydiskvolume6
+    name: emptydisk6
 ----
 
 This VM is identical to the first, except it requests auto IOThreads.
@@ -1219,7 +1180,6 @@ spec:
       - disk:
           bus: virtio
         name: mydisk
-        volumeName: mypvc
 ----
 
 *Note:* Due to the way KubeVirt implements CPU allocation,
@@ -1240,7 +1200,7 @@ Example
 ----
 metadata:
   name: testvmi-disk
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 spec:
   domain:
@@ -1252,11 +1212,10 @@ spec:
       blockMultiQueue: true
       disks:
       - name: mypvcdisk
-        volumeName: mypvc
         disk:
           bus: virtio
   volumes:
-    - name: mypvc
+    - name: mypvcdisk
       persistentVolumeClaim:
         claimName: mypvc
 ----
@@ -1290,7 +1249,7 @@ Example: force `writethrough` cache mode
 
 [source,yaml]
 ----
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 metadata:
   labels:
@@ -1303,7 +1262,6 @@ spec:
       - disk:
           bus: virtio
         name: pvcdisk
-        volumeName: pvcvolume
         cache: writethrough
     machine:
       type: ""
@@ -1312,7 +1270,7 @@ spec:
         memory: 64M
   terminationGracePeriodSeconds: 0
   volumes:
-  - name: pvcvolume
+  - name: pvcdisk
     persistentVolumeClaim:
       claimName: disk-alpine
 status: {}
