--- a/templates/common-templates.adoc
+++ b/templates/common-templates.adoc
@@ -123,7 +123,7 @@ And the output:
 ----
 apiVersion: v1
 items:
-- apiVersion: kubevirt.io/v1alpha2
+- apiVersion: kubevirt.io/v1alpha3
   kind: VirtualMachine
   metadata:
     labels:
@@ -144,22 +144,15 @@ items:
             - disk:
                 bus: virtio
               name: rootdisk
-              volumeName: rootvolume
             rng: {}
           resources:
             requests:
               memory: 1G
         terminationGracePeriodSeconds: 0
         volumes:
-        - name: rootvolume
+        - name: rootdisk
           persistentVolumeClaim:
             claimName: mydisk
-        - cloudInitNoCloud:
-            userData: |-
-              #cloud-config
-              password: redhat
-              chpasswd: { expire: False }
-          name: cloudinitvolume
 kind: List
 metadata: {}
 ----
