doc: address reviewers comments
Signed-off-by: Francesco Romani <fromani@redhat.com>

--- a/templates/common-templates.adoc
+++ b/templates/common-templates.adoc
@@ -122,7 +122,7 @@ And the output:
 
 [source,yaml]
 ----
-apiVersion: v1
+apiversion: v1
 items:
 - apiVersion: kubevirt.io/v1alpha3
   kind: VirtualMachine
@@ -235,7 +235,7 @@ kind: Template
 metadata:
   name: Linux
   annotations:
-    defaults.template.cnv.io/disk: virtio
+    defaults.template.cnv.io/disk: rhel-disk
 ----
 
 nic
@@ -252,7 +252,7 @@ kind: Template
 metadata:
   name: Windows
   annotations:
-    defaults.template.cnv.io/nic: e1000
+    defaults.template.cnv.io/nic: my-nic
 ----
 
 volume
@@ -288,3 +288,87 @@ metadata:
   annotations:
     defaults.template.cnv.io/network: fast-net
 ----
+
+complete example
+++++++++++++++++
+
+[demo-template.yaml]
+----
+apiversion: v1
+items:
+- apiversion: kubevirt.io/v1alpha3
+  kind: virtualmachine
+  metadata:
+    labels:
+      vm.cnv.io/template: rhel7-generic-tiny
+    name: rheltinyvm
+    osinfoname: rhel7.0
+    defaults.template.cnv.io/disk: rhel-default-disk
+    defaults.template.cnv.io/nic: rhel-default-nic
+  spec:
+    running: false
+    template:
+      spec:
+        domain:
+          cpu:
+            sockets: 1
+            cores: 1
+            threads: 1
+          devices:
+            rng: {}
+          resources:
+            requests:
+              memory: 1g
+        terminationgraceperiodseconds: 0
+        volumes:
+        - containerDisk:
+          image: registry:5000/kubevirt/cirros-container-disk-demo:devel
+          name: rhel-default-disk
+        networks:
+        - genie:
+          networkName: flannel
+        name: rhel-default-nic
+kind: list
+metadata: {}
+
+
+once processed becomes:
+[demo-vm.yaml]
+---
+apiVersion: kubevirt.io/v1alpha3
+kind: VirtualMachine
+metadata:
+  labels:
+    vm.cnv.io/template: rhel7-generic-tiny
+  name: rheltinyvm
+  osinfoname: rhel7.0
+spec:
+  running: false
+  template:
+    spec:
+      domain:
+        cpu:
+          sockets: 1
+          cores: 1
+          threads: 1
+        resources:
+          requests:
+            memory: 1g
+        devices:
+          rng: {}
+          disks:
+          - disk:
+            name: rhel-default-disk
+        interfaces:
+        - bridge: {}
+          name: rhel-default-nic
+      terminationgraceperiodseconds: 0
+      volumes:
+      - containerDisk:
+          image: registry:5000/kubevirt/cirros-container-disk-demo:devel
+        name: containerdisk
+      networks:
+      - genie:
+          networkName: flannel
+        name: rhel-default-nic
+
