--- a/creating-virtual-machines/interfaces-and-networks.adoc
+++ b/creating-virtual-machines/interfaces-and-networks.adoc
@@ -33,12 +33,13 @@ Each network should declare its type by defining one of the following
 fields:
 
 [cols=",",options="header",]
-|=================================================
+|==============================================================
 |Type |Description
 |`pod` |Default Kubernetes network
 |`multus` |Secondary network provided using Multus
 |`genie` |Secondary network provided using Genie
-|=================================================
+|`tungstenfabric` |Primary network provided using TunstenFabric
+|==============================================================
 
 pod
 ^^^
@@ -176,6 +177,49 @@ spec:
     genie: # Secondary genie network
       networkName: ovs
 ----
+
+tungstenfabric
+^^^^^^^^^^^^^^
+
+It is also possible to connect VMIs to a networks using
+https://tungstenfabric.io/[TungstenFabric]. This assumes that
+TungstenFabric SDN controller is installed across your cluster. For now
+only one interface is supported. By default a VMI connects to the 
+default POD network. However, by setting the network name to a specifc
+network, alternative networks can be used.
+The alternative network must be created upfront.
+
+[source,yaml]
+---
+apiVersion: kubevirt.io/v1alpha3
+kind: VirtualMachineInstance
+metadata:
+  labels:
+    special: tf-br
+  name: tf-br
+spec:
+  domain:
+    devices:
+      disks:
+      - disk:
+          bus: virtio
+        name: containerdisk
+      interfaces:
+      - bridge: {}
+        name: net1
+    machine:
+      type: ""
+    resources:
+      requests:
+        memory: 64M
+  networks:
+  - tungstenfabric:
+      networkName: '{"domain":"default-domain", "project": "k8s-default","name":"test"}'
+    name: net1
+  volumes:
+  - containerDisk:
+      image: docker.io/michaelhenkel/cirros-container-disk-demo:devel
+    name: containerdisk
 
 Frontend
 ~~~~~~~~
