--- a/creating-virtual-machines/interfaces-and-networks.adoc
+++ b/creating-virtual-machines/interfaces-and-networks.adoc
@@ -218,7 +218,7 @@ spec:
     name: net1
   volumes:
   - containerDisk:
-      image: docker.io/michaelhenkel/cirros-container-disk-demo:devel
+      image: kubevirt/cirros-container-disk-demo:devel
     name: containerdisk
 
 Frontend
