--- a/creating-virtual-machines/interfaces-and-networks.adoc
+++ b/creating-virtual-machines/interfaces-and-networks.adoc
@@ -33,13 +33,13 @@ Each network should declare its type by defining one of the following
 fields:
 
 [cols=",",options="header",]
-|==============================================================
+|================================================================
 |Type |Description
 |`pod` |Default Kubernetes network
 |`multus` |Secondary network provided using Multus
 |`genie` |Secondary network provided using Genie
-|`tungstenfabric` |Primary network provided using TunstenFabric
-|==============================================================
+|`tungstenfabric` |Secondary network provided using TunstenFabric
+|================================================================
 
 pod
 ^^^
