--- a/creating-virtual-machines/virtualized-hardware-configuration.adoc
+++ b/creating-virtual-machines/virtualized-hardware-configuration.adoc
@@ -44,8 +44,32 @@ https://wiki.qemu.org/Features/Q35[at QEMU wiki].
 BIOS/UEFI
 ~~~~~~~~~
 
-All virtual machines currently use BIOS for booting. UEFI/OVMF is not
-yet supported.
+All virtual machines use BIOS by default for booting.
+
+It is possible to utilize UEFI/OVMF by setting a value via `spec.firmware.bootloader`:
+
+[source.yaml]
+----
+apiVersion: kubevirt.io/v1alpha3
+kind: VirtualMachineInstance
+metadata:
+  labels:
+    special: vmi-alpine-efi
+  name: vmi-alpine-efi
+spec:
+  domain:
+    devices:
+      disks:
+      - disk:
+          bus: virtio
+        name: containerdisk
+    firmware:
+      # this sets the bootloader type
+      bootloader:
+        efi: {}
+----
+
+SecureBoot is not yet supported.
 
 SMBIOS Firmware
 ~~~~~~~~~~~~~~~
