--- a/templates/common-templates.adoc
+++ b/templates/common-templates.adoc
@@ -290,7 +290,7 @@ metadata:
 references
 ++++++++++
 
-The default values for network, nic, volume, disk is meant to be the *name* of a section later in the document that the UI will find and consume to find the default values for the corresponding types.
+The default values for network, nic, volume, disk are meant to be the *name* of a section later in the document that the UI will find and consume to find the default values for the corresponding types.
 For example, considering the annotation `defaults.template.cnv.io/disk: my-disk`: we assume that later in the document it exists an element called `my-disk` that the UI can use to find the data it needs.
 The names actually don't matter as long as they are legal for kubernetes and consistent with the content of the document.
 
