templates: fix names
Signed-off-by: Francesco Romani <fromani@redhat.com>

--- a/templates/common-templates.adoc
+++ b/templates/common-templates.adoc
@@ -309,7 +309,7 @@ items:
     name: rheltinyvm
     osinfoname: rhel7.0
     defaults.template.cnv.io/disk: rhel-default-disk
-    defaults.template.cnv.io/nic: rhel-default-nic
+    defaults.template.cnv.io/nic: rhel-default-net
   spec:
     running: false
     template:
@@ -332,7 +332,7 @@ items:
         networks:
         - genie:
           networkName: flannel
-        name: rhel-default-nic
+          name: rhel-default-net
 kind: list
 metadata: {}
 
