enable usb devices

--- a/creating-virtual-machines/virtualized-hardware-configuration.adoc
+++ b/creating-virtual-machines/virtualized-hardware-configuration.adoc
@@ -336,6 +336,7 @@ boot. Most noteworthy are
 * *acpi*
 * *apic*
 * *hyperv*
+* *usbDevice*
 
 A common feature configuration is shown by the following example:
 
@@ -351,6 +352,7 @@ spec:
     features:
       acpi: {}
       apic: {}
+      usbDevice: {}
       hyperv:
         relaxed: {}
         vapic: {}
