add usb input device

--- a/creating-virtual-machines/virtualized-hardware-configuration.adoc
+++ b/creating-virtual-machines/virtualized-hardware-configuration.adoc
@@ -479,7 +479,8 @@ Tablet
 ++++++
 
 Kubevirt supports input devices. The only type which is supported is `tablet`. 
-Tablet input device supports only `virtio` bus.
+Tablet input device supports only `virtio` and `usb` bus. Bus can be empty. In that case,
+`usb` will be selected.
 
 [source,yaml]
 ----
