monitoring: document the VM metrics
mention the VM metrics.

--- a/administration/monitoring.adoc
+++ b/administration/monitoring.adoc
@@ -111,6 +111,12 @@ is up and running, deploy the `ServiceMonitor` definition from above.
 Because the definition contains the `openshift.io/cluster-monitoring`
 label, it will automatically be picked up by the cluster monitor.
 
+Metrics about Virtual Machines
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+The endpoints report metrics related to the runtime behaviour of the Virtual Machines.
+All the relevant metrics are prefixed with `kubevirt_vm`.
+
 Important Queries
 ~~~~~~~~~~~~~~~~~
 
