--- a/templates/using-templates.adoc
+++ b/templates/using-templates.adoc
@@ -7,7 +7,7 @@ These templates provide a combination of some key factors that could be further 
 
 The key factors which define a template are
  - Workload
-  Most Virtual Machine should be *generic* to have maximum flexibility; the *highperformance* workload trades some of this flexibility to
+  Most Virtual Machine should be *server* or *desktop* to have maximum flexibility; the *highperformance* workload trades some of this flexibility to
   provide better performances.
 - Guest Operating System (OS)
   This allow to ensure that the emulated hardware is compatible with the guest OS. Furthermore, it allows to maximize the stability
