--- a/creating-virtual-machines/guest-operating-system-information.adoc
+++ b/creating-virtual-machines/guest-operating-system-information.adoc
@@ -147,3 +147,41 @@ spec:
 ----
 
 For more information see link:presets.md[VirtualMachineInstancePresets]
+
+HyperV optimizations
+~~~~~~~~~~~~~~~~~~~~
+
+KubeVirt supports quite a lot of so-called "HyperV enlightenments", which are optimizations for Windows Guests.
+Some of these optimization may require an up to date host kernel support to work properly, or to deliver the maxiumum
+performance gains.
+
+KubeVirt can perform extra checks on the hosts before to run Hyper-V enabled VMs, to make sure the host has no known
+issues with HyperV support, and thus we can expect optimal performance.
+This check is disabled by default for backward compatibility and because it depends on the https://github.com/kubernetes-sigs/node-feature-discovery[node-feature-discovery]
+and on extra configuration.
+
+To enable strict host checking, the user may expand the
+`feature-gates` field in the kubevirt-config config map by adding the
+`HypervSupport` to it.
+
+....
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: kubevirt-config
+  namespace: kubevirt
+  labels:
+    kubevirt.io: ""
+data:
+  feature-gates: "HypervSupport"
+....
+
+Alternatively, users can edit an existing kubevirt-config:
+
+`kubectl edit configmap kubevirt-config -n kubevirt`
+
+....
+...
+data:
+  feature-gates: "HypervSupport,CPUManager"
+....
